--- a/Assets/Menu/UI Toolkit/Panels/Buttons.uxml
+++ b/Assets/Menu/UI Toolkit/Panels/Buttons.uxml
@@ -1,11 +1,11 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Menu/UI%20Toolkit/Styles/BtnEnv.uss?fileID=7433441132597879392&amp;guid=d736e6ece144b490d90ddcf88c23fb4c&amp;type=3#BtnEnv" />
-    <ui:Label tabindex="-1" text="Label" display-tooltip-when-elided="true" name="label" style="-unity-text-align: lower-center; height: 25px; font-size: 25px; -unity-font-style: bold;" />
+    <ui:Label tabindex="-1" text="Label" display-tooltip-when-elided="true" name="label" style="-unity-text-align: lower-center; height: 25px; font-size: 25px; -unity-font-style: bold; background-color: rgba(31, 31, 31, 0.46); color: rgb(255, 255, 255); -unity-background-image-tint-color: rgba(2, 2, 2, 0.84); -unity-text-outline-color: rgba(243, 0, 0, 0);" />
     <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: column; align-items: flex-end; justify-content: space-around; align-self: flex-start; top: 5%; height: 419px; flex-wrap: nowrap; max-width: none; max-height: none;">
-        <ui:Button text="WATER" display-tooltip-when-elided="true" name="Watter" class="btn" style="overflow: hidden; text-overflow: clip; white-space: nowrap; -unity-text-align: middle-center; width: 40%;" />
-        <ui:Button text="LAND" display-tooltip-when-elided="true" name="Land" class="btn" style="width: 40%;" />
-        <ui:Button text="SAND" display-tooltip-when-elided="false" name="Air" class="btn" style="width: 40%;" />
-        <ui:Button text="TEMPEST" display-tooltip-when-elided="true" name="Tempest" class="btn" style="width: 40%;" />
-        <ui:Button text="EXIT" display-tooltip-when-elided="true" name="Exit" class="btn" style="width: 40%;" />
+        <ui:Button display-tooltip-when-elided="true" name="Watter" enable-rich-text="false" class="btn" style="overflow: hidden; text-overflow: clip; white-space: nowrap; -unity-text-align: middle-center; width: 40%; background-image: url(&apos;project://database/Assets/Menu/Image/at-sea.png?fileID=2800000&amp;guid=06e624dcbbd0e1e4f84bbeeafc1f00c5&amp;type=3#at-sea&apos;); height: auto;" />
+        <ui:Button display-tooltip-when-elided="true" name="Land" class="btn" style="width: 40%; background-image: url(&apos;project://database/Assets/Menu/Image/grass.png?fileID=2800000&amp;guid=573d59d3537805446bc6e69cdeba23ad&amp;type=3#grass&apos;);" />
+        <ui:Button display-tooltip-when-elided="false" name="Air" class="btn" style="width: 40%; background-image: url(&apos;project://database/Assets/Menu/Image/powder.png?fileID=2800000&amp;guid=e5d4e7f75cdb73145af9782d0689c62e&amp;type=3#powder&apos;);" />
+        <ui:Button display-tooltip-when-elided="true" name="Tempest" class="btn" style="width: 40%; background-image: url(&apos;project://database/Assets/Menu/Image/sandstorm.png?fileID=2800000&amp;guid=a737d88077df6604d9229eb7c3ec8366&amp;type=3#sandstorm&apos;);" />
+        <ui:Button display-tooltip-when-elided="true" name="Exit" class="btn" style="width: 40%; background-image: url(&apos;project://database/Assets/Menu/Image/exit-door.png?fileID=2800000&amp;guid=923628f7f358e6e4ab8ef0f387c61c57&amp;type=3#exit-door&apos;);" />
     </ui:VisualElement>
 </ui:UXML>
