--- a/Assets/Menu/UI Toolkit/Styles/BtnEnv.uss
+++ b/Assets/Menu/UI Toolkit/Styles/BtnEnv.uss
@@ -1,15 +1,19 @@
 .btn {
     justify-content: flex-start;
     align-self: center;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-left: 45px;
-    margin-right: 45px;
-    margin-top: 45px;
-    margin-bottom: 45px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     position: relative;
-    width: 12%;
+    width: 154%;
     bottom: 0;
+    height: 49%;
+    max-width: 87px;
+    max-height: 416px;
+    min-width: 100px;
 }
