--- a/Assets/Menu/UI Toolkit/Panels/Buttons.uxml
+++ b/Assets/Menu/UI Toolkit/Panels/Buttons.uxml
@@ -4,9 +4,7 @@
         <ui:Label tabindex="-1" text="Label" display-tooltip-when-elided="true" name="turn_text" style="-unity-text-align: upper-center; margin-top: 0; margin-right: 0; margin-left: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; text-shadow: 1px 1px 0 rgb(0, 0, 0); color: rgb(255, 255, 255); font-size: 30px;" />
         <ui:Label tabindex="-1" text="Label" display-tooltip-when-elided="true" name="score_text" style="-unity-text-align: upper-center; margin-top: 0; margin-right: 0; margin-left: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; font-size: 30px; color: rgb(255, 255, 255); text-shadow: 1px 1px 0 rgb(0, 0, 0);" />
     </ui:VisualElement>
-    <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); width: 15%; height: 1%; align-self: flex-end;">
-        <ui:Label tabindex="-1" display-tooltip-when-elided="true" style="background-image: url(&apos;project://database/Assets/Menu/Image/sandstorm.png?fileID=2800000&amp;guid=a737d88077df6604d9229eb7c3ec8366&amp;type=3#sandstorm&apos;); -unity-background-scale-mode: scale-to-fit; width: 100%; height: 100%; align-self: flex-end; justify-content: flex-start;" />
-    </ui:VisualElement>
+    <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); width: 15%; height: 1%; align-self: flex-end;" />
     <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-items: stretch; justify-content: center; align-self: flex-end; flex-direction: row; -unity-text-align: middle-center; white-space: normal; width: 15%; height: 10%;">
         <ui:Label tabindex="-1" display-tooltip-when-elided="true" style="-unity-text-align: middle-center; white-space: nowrap; width: 100%; background-image: url(&apos;project://database/Assets/Menu/Image/Diagramme%20sans%20nom.drawio.png?fileID=2800000&amp;guid=9c2ee377ea09f9744afa86b49fb5bb36&amp;type=3#Diagramme sans nom.drawio&apos;); height: 100%; text-overflow: ellipsis; align-self: center; justify-content: center; align-items: stretch; -unity-background-scale-mode: scale-to-fit;" />
     </ui:VisualElement>
